--- a/imooc_htmlcss_newyear.html
+++ b/imooc_htmlcss_newyear.html
@@ -10,7 +10,7 @@
 		  			maximum-scale=1.0,
 		  			user-scalable=no"/>
 	<meta name="format-detection" content="telephone=no">
-	<title>Document</title>
+	<title>New Year</title>
 	<style>
 		/*all page*/
 		*{
