--- a/imooc_webapp_photo_album.html
+++ b/imooc_webapp_photo_album.html
@@ -9,7 +9,7 @@
 		  			minimum-scale=1.0,
 		  			maximum-scale=1.0,
 		  			user-scalable=no"/>
-	<title>Document</title>
+	<title>Album</title>
 	<style>
 		html, body, div, span, applet, object, iframe,
 		h1, h2, h3, h4, h5, h6, p, blockquote, pre,
