--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport"
         content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
 	<meta charset="UTF-8">
-	<title>3dRotate demo</title>
+	<title>WebApp demo</title>
     <style>
         div{
             width: 200px;
